[metadata]
name = anyutils
summary = Some Uitls For Python
author = zbw
author_email = 2535463841@qq.com
home_page = https://github.com/fjboy/any-utils

[files]
packages = anyutils

[entry_points]
console_scripts =
    any-utils = anyutils.cmd.base:main
    any-utils-ext = anyutils.cmd.ext:main

anyutils.extensions =
    qrcode = anyutils.extensions.qrcode:list_sub_commands
    sshcp = anyutils.extensions.sshcp:list_sub_commands
    tanslate = anyutils.extensions.translate:list_sub_commands
    wd = anyutils.extensions.wallpaper.downloaders:list_sub_commands
    jgupload = anyutils.extensions.webdav.jianguo:list_sub_commands
    smmsupload = anyutils.extensions.picbed.smms:list_sub_commands
    giteeupload = anyutils.extensions.picbed.gitee:list_sub_commands
